--- a/web/templates/add_client.html
+++ b/web/templates/add_client.html
@@ -17,7 +17,9 @@
             <label for="type_id">Client Type</label>
             <select id="type_id" name="type_id" required>
                 {% for type in all_types %}
+                {% if type.name != 'Deleted' and type.name != 'Inactive' %}
                 <option value="{{ type.id }}">{{ type.name }}</option>
+                {% endif %}
                 {% endfor %}
             </select>
         </div>
