--- a/web/templates/client_file.html
+++ b/web/templates/client_file.html
@@ -15,7 +15,7 @@
 <div class="card">
     <div style="display: flex; justify-content: space-between; align-items: start; margin-bottom: 2rem;">
         <div>
-            <h2 style="color: #111827; margin-bottom: 0.5rem;">{{ client.first_name }} {{ client.middle_name }} {{ client.last_name }}</h2>
+            <h2 style="color: #111827; margin-bottom: 0.5rem;">{{ client.first_name }} {% if client.middle_name %}{{ client.middle_name }}{% endif %} {{ client.last_name }}</h2>
             <div style="color: #5B6571;">
                 <div style="position: relative; display: inline-block;">
                     <span class="type-badge" 
