--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -246,7 +246,7 @@
         // Apply background
         if (backgroundStyle === 'suit-grey') {
             document.body.style.backgroundImage = 'none';
-            document.body.style.backgroundColor = '#EDF2F5';
+            document.body.style.backgroundColor = '#C5CDD3';
         } else {
             // Parse the background value (system:filename or user:filename)
             let bgPath;
