--- a/web/templates/components/edit_history.html
+++ b/web/templates/components/edit_history.html
@@ -5,7 +5,7 @@
         {% for edit in edit_history %}
         <div class="history-item">
             <span class="timestamp">{{ edit.timestamp | timestamp_to_date }}</span>
-            <span class="changes">{{ edit.description }}</span>
+            <span class="changes">{{ edit.description | safe }}</span>
         </div>
         {% endfor %}
     </div>
