--- a/web/templates/entry_forms/session.html
+++ b/web/templates/entry_forms/session.html
@@ -278,8 +278,7 @@
 
 <script id="fee-sources-data" type="application/json">
 {
-    "profileOverride": {{ profile_override | tojson if profile_override else 'null' }},
-    "clientType": {{ client_type_fees | tojson }},
+    "profileFees": {{ profile_fees | tojson }},
     "linkGroups": {{ link_group_fees | tojson }}
 }
 </script>
